refresh button spacing fix

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -7470,7 +7470,7 @@ h4 {
   padding-left: 0;
 }
 .filter-group__button {
-  margin-bottom: 30px;
+  margin-bottom: 23px;
   padding: 11px 30px;
   border: 1px solid #efefef;
   font-family: "Roboto", "Arial", sans-serif;
