--- a/bootstrap-3.3.7/less/cell-selection.less
+++ b/bootstrap-3.3.7/less/cell-selection.less
@@ -105,7 +105,7 @@
     }
     
     &__button {
-        margin-bottom: 30px;
+        margin-bottom: 23px;
         padding: 11px 30px;
         border: 1px solid #efefef;
         font-family: "Roboto", "Arial", sans-serif;
